--- a/HiconisASManager/HiconisASManageR.dproj
+++ b/HiconisASManager/HiconisASManageR.dproj
@@ -71,7 +71,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <DCC_UnitSearchPath>E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\core;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\crypt;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\db;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\ddd;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\lib;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\misc;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\net;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\orm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\rest;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\mORMot2-master\src\soa;E:\pjh\Dev\Lang\Delphi\NoGitHub\Util;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegisterPas2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2;E:\pjh\Dev\Lang\Delphi\NoGitHub\RegCodeManager2\Common;E:\pjh\Dev\Lang\Delphi\common;E:\pjh\project\common;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common;E:\pjh\Dev\Lang\Delphi\Project\GSManage;E:\pjh\Dev\Lang\Delphi\common\DataType;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\TStateMachine-master\source;E:\pjh\Dev\Lang\Delphi\common\Frame;E:\pjh\Dev\Lang\Delphi\common\Form;E:\pjh\project\common\LKSLEventUnits;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\delphistompclient-master;E:\pjh\Dev\Lang\Delphi\Project\GSManage\Common\Dom;E:\pjh\project\OpenSrc\lib\DelphiDabbler;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\SendInputHelper-master;E:\pjh\vcl\ralarm;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Hooks-master;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\GpDelphiUnit\src;E:\pjh\project\common\Forms;E:\pjh\Dev\Lang\Delphi\Project\GSManage\TariffManager2;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Cromis\IPC;E:\pjh\project\OpenSrc\lib\LKSL-master\Source\Lib\Pascal;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\Drag-and-Drop-Component-Suite-for-Delphi-master\DemosWithoutInstall\Outlook\MAPI;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\Util;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\common;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook\common\tlb;E:\pjh\Dev\Lang\Delphi\Project\RPA\Outlook;E:\pjh\Dev\Lang\Delphi\OpenSrc\lib\ArrayHelper-master;E:\pjh\Dev\Lang\Delphi\Project\RPA\MacroManage;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
-        <DCC_Define>USE_REGCODE;USE_SCRYPT;GAMANAGER;USE_SYN_CRYPT;USE_CROMIS_IPC;$(DCC_Define)</DCC_Define>
+        <DCC_Define>USE_REGCODE;USE_SCRYPT;USE_SYN_CRYPT;USE_CROMIS_IPC;$(DCC_Define)</DCC_Define>
         <DCC_DcuOutput>Y:\pjh\Dcu\Win32\$(MSBuildProjectName)</DCC_DcuOutput>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
@@ -88,15 +88,8 @@
         <DelphiCompile Include="$(MainSource)">
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
-        <DCCReference Include="FrmHiconisASManage.pas">
-            <Form>HiconisASManageF</Form>
-        </DCCReference>
         <DCCReference Include="FrmHiconisASTaskEdit.pas">
             <Form>TaskEditF</Form>
-        </DCCReference>
-        <DCCReference Include="..\Common\FrameDisplayTaskInfo2.pas">
-            <Form>DisplayTaskF</Form>
-            <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="..\..\..\..\..\..\project\util\GSManage\FrmFileSelect.pas">
             <Form>FileSelectF</Form>
@@ -150,8 +143,8 @@
             <Form>ASMaterialF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="..\..\RPA\Outlook\Util\FrmOLControl.pas">
-            <Form>OLControlF</Form>
+        <DCCReference Include="..\..\RPA\Outlook\Util\FrmOLEmailList.pas">
+            <Form>OLEmailListF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\..\..\Common\UnitOutlookUtil2.pas"/>
@@ -184,6 +177,10 @@
         <DCCReference Include="..\..\..\Common\UnitStateMachineUtil.pas"/>
         <DCCReference Include="FrmASMaterialDetailEdit.pas">
             <Form>MaterialDetailF</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="FrmHiconisASManage.pas">
+            <Form>HiconisAsManageF</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <None Include="HiconisASManageR.todo"/>
@@ -259,8 +256,7 @@
                 </Source>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclIPIndyImpl190.bpl">IP Abstraction Indy Implementation Design Time</Excluded_Packages>
-                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhIOCompProPkg.bpl">(untitled)</Excluded_Packages>
-                    <Excluded_Packages Name="E:\pjh\project\util\VisualComm\Component\bpl\pjhDelphiStandardPkg.bpl">(untitled)</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Public\Documents\RAD Studio\12.0\Bpl\DelphiXE5_RestApi.bpl">(untitled)</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k190.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp190.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
                 </Excluded_Packages>
