--- a/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
+++ b/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
@@ -101,6 +101,7 @@
         <DCCReference Include="UnitChkDupIdData.pas"/>
         <DCCReference Include="..\..\..\..\Common\UnitTRegExUtil.pas"/>
         <DCCReference Include="..\..\..\..\Common\UnitHtmlUtil.pas"/>
+        <DCCReference Include="UnitHiConTCPWorker.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
