--- a/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
+++ b/HiconisASManager/HiConChkDuplicateID/HiConTCP.dproj
@@ -106,6 +106,10 @@
         <DCCReference Include="..\..\..\..\NoGitHub\Util\UnitCryptUtil3.pas"/>
         <DCCReference Include="..\UnitHiconSystemDBUtil.pas"/>
         <DCCReference Include="..\..\..\..\Common\Dom\UnitAnimationThread.pas"/>
+        <DCCReference Include="..\..\..\..\Common\Form\FrmElapsedTime.pas">
+            <Form>ElapsedTimeF</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
